# azureenergylabelercli

./: .gitlab-ci.yml  .readthedocs.yaml  CONTRIBUTING.rst  HISTORY.rst  INSTALLATION.rst  LICENSE  MANIFEST.in  Pipfile  README.md  README.rst  USAGE.rst  azure_energy_labeler_cli.py  dev-requirements.txt  pylintrc  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: dev.yml  docs.yml  main.yml  security.yml  update-deps.yml
_CI/configuration/: configuration.py
_CI/files/: environment_variables.json
_CI/scripts/: test.py
azureenergylabelercli/: __init__.py  _version.py  azureenergylabelercli.py  azureenergylabelercliexceptions.py  validators.py
azureenergylabelercli/conf/: logging.json-example
conf/: logging.json-example
docs/: Makefile  azureenergylabelercli.rst  conf.py  index.rst  modules.rst
scripts/: build.sh  lint.sh  test.sh  upload.sh
tests/: __init__.py  test_azureenergylabelercli.py
